--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,12 @@
-<p>products works!</p>
+<main id="products">
+  <section class="container">
+    <header>
+      <h4>Products</h4>
+    </header>
+
+    <app-product-list></app-product-list>
+  </section>
+</main>
 
 <router-outlet></router-outlet>
 
