--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,37 @@
-<p>shopping-cart works!</p>
+<div class="col-sm-10 offset-sm-1">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Product</th>
+        <th scope="col">Amount</th>
+        <th scope="col">Price</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let shoppingCartItem of shoppingCartService.products | keyvalue" (click)="shoppingCartService.remove(shoppingCartItem.key)">
+        <td>{{ shoppingCartItem.key.name }}</td>
+        <td>{{ shoppingCartItem.value }}</td>
+        <td>${{ (shoppingCartItem.key.price * shoppingCartItem.value).toFixed(2) }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="row">
+  <div class="col-sm-2 offset-1">
+    <table class="table">
+      <tbody>
+      <tr>
+        <th>Total Price:</th>
+        <td>${{ shoppingCartService.totalPrice() }}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-sm-1 offset-7">
+    <button class="order-button">Order</button>
+  </div>
+</div>
 
 <router-outlet></router-outlet>
 
