--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,8 +1,7 @@
 <div class="row">
   <div class="col-md4 text-center">
     <form>
-      <img class="mt-4" src="" height="72" alt="logo image">
-      <h4 class="mb-3">Please login</h4>
+      <h4 class="mb-3">Please register</h4>
       <label for="username" class="visually-hidden">Username</label>
       <input type=""
              id="username"
@@ -23,24 +22,15 @@
 
       <p class="alert-warning" *ngIf="showErrorMessage">Something went wrong, please try again</p>
 
-      <div class="checkbox float-start">
-        <label>
-          <input type="checkbox"
-                 class="mb-3"
-                 value="remember-me" #remember>
-          Remember me
-        </label>
-      </div>
+      <a routerLink="../">Login here</a>
+
       <div class="mt-3">
         <a type="button"
            class="btn form-button w-100"
-           (click)="login(username.value, email.value, password.value, remember.value)">
-          Login
+           (click)="register(username.value, email.value, password.value)">
+          Register
         </a>
       </div>
     </form>
   </div>
 </div>
-
-<router-outlet></router-outlet>
-
