--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-2 offset-1">
+  <div class="col-sm-2 offset-sm-1">
     <table class="table">
       <tbody>
       <tr>
@@ -28,8 +28,8 @@
       </tbody>
     </table>
   </div>
-  <div class="col-sm-1 offset-7">
-    <button class="order-button">Order</button>
+  <div class="col-sm-1 offset-sm-7 d-flex d-sm-block justify-content-center">
+    <button class="order-button" (click)="order()">Order</button>
   </div>
 </div>
 
