Added logout functionality

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #7D4698FF" role="navigation">
   <div class="container">
     <header class="navbar-header">
-      <a routerLink="home" class="navbar-brand">OnionShop</a>
+      <a routerLink="" class="navbar-brand">OnionShop</a>
     </header>
 
     <button class="navbar-toggler"
@@ -40,7 +40,7 @@
           </li>
 
           <li class="nav-item">
-            <a *ngSwitchCase="true" routerLink="account" class="nav-link raised" routerLinkActive="active">Account</a>
+            <a *ngSwitchCase="true" routerLink="login" (click)="logout()" class="nav-link raised" routerLinkActive="active">Logout</a>
           </li>
         </div>
       </ul>
