--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,10 +17,6 @@
     <div class="collapse navbar-collapse" id="toggleMobileMenu">
       <ul class="nav navbar-nav ms-auto text-center">
         <li class="nav-item">
-          <a routerLink="home" class="nav-link" routerLinkActive="active">Home</a>
-        </li>
-
-        <li class="nav-item">
           <a routerLink="products" class="nav-link" routerLinkActive="active">Products</a>
         </li>
 
@@ -31,6 +27,12 @@
         <div *ngIf="this.userService.user !== this.userService.user.emptyUser">
           <li class="nav-item">
             <a routerLink="orders" class="nav-link" routerLinkActive="active">Orders</a>
+          </li>
+        </div>
+
+        <div *ngIf="this.userService.user !== this.userService.user.emptyUser && this.userService.user.role == 'ADMIN'">
+          <li class="nav-item">
+            <a routerLink="edit" class="nav-link" routerLinkActive="active">Edit</a>
           </li>
         </div>
 
